Fixed multiple issues 1. Added to Cart button 2. Increase quantity 3. Remove Item button 4. Total alignment 5. Added no items message. 6. Alignment fixes.

--- a/src/app/shopping-cart/shopping-cart.component.css
+++ b/src/app/shopping-cart/shopping-cart.component.css
@@ -1,5 +1,13 @@
-.total-amount-wrapper .title {
-    text-decoration: underline;
+.total-amount-section {
+    display: flex;
+    justify-content: flex-end;
+    padding: 0 30px;
+}
+
+.no-cart-items {
+    margin: 20px;
+    padding: 20px;
+    border: 1px solid #ff4500;
 }
 
 @media only screen and (max-width: 768px) {
